# SIPlus

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Readme.md  SiplusSwig.i  TODO.md  config.h.in
dependencies/: CMakeLists.txt
docs/: changelog.md  development.md  functions.md  syntax.md
example/: CMakeLists.txt  common.cpp  common.hxx
example/basic/: CMakeLists.txt  main.cpp
example/c/: CMakeLists.txt  main.c
example/function/: CMakeLists.txt  main.cpp
grammar/: StringInterpolatorLexer.g4  StringInterpolatorParser.g4
include/siplus/: _config.h  build_context.h  build_context.hxx  context.h  context.hxx  csiplus.h  data.h  data.hxx  function.h  function.hxx  invocation_context.h  invocation_context.hxx  parser.h  parser.hxx  pch.h  pch.hxx  siplus.h  siplus.hxx  stl.h  stl.hxx  types.h  types.hxx  util.h  util.hxx  vector_iterator.h  vector_iterator.hxx
include/siplus/internal/: binary_type_cache.h  binary_type_cache.hxx  vector_iterator_provider.h
include/siplus/stl/: converters.h  converters.hxx  functions.h  functions.hxx  iterators.h
include/siplus/stl/converters/: bool_string.h  bool_string.hxx  int_string.h  null.hxx  numeric.h  numeric.hxx  string_bool.h  string_bool.hxx
include/siplus/stl/functions/: add.h  arithmetic.h  arithmetic.hxx  boolean.h  comparison.h  comparison.hxx  control.h  control.hxx  converting_operator.h  converting_operator.hxx  if.h  iterable.h  iterable.hxx  map.h  rand.h  rand.hxx  set.h  set.hxx  str.h  text.h  text.hxx  type.hxx  typed_operator.h  typed_operator.hxx
include/siplus/stl/iterators/: string_iterator_provider.h  vector_iterator_provider.h
include/siplus/text/: accessor.h  accessor.hxx  constructor.h  constructor.hxx  converter.h  converter.hxx  data.h  iterator.h  iterator.hxx  range_iterator.hxx  text.h  text.hxx
include/siplus/text/constructor_steps/: constructor_step.h  constructor_step.hxx  literal_step.h  literal_step.hxx  nested_constructor_step.h  repeated_constructor_step.h  repeated_constructor_step.hxx  retriever_step.h  retriever_step.hxx
include/siplus/text/value_retrievers/: accessor_retriever.h  accessor_retriever.hxx  dummy_retriever.h  dummy_retriever.hxx  lambda_value_retriever.h  lambda_value_retriever.hxx  literal_retriever.h  literal_retriever.hxx  retriever.h  retriever.hxx  settable_value_retriever.h  settable_value_retriever.hxx
include/siplus/types/: array.h  array.hxx  bool.h  bool.hxx  float.h  float.hxx  integer.h  integer.hxx  string.h  string.hxx
scripts/: combine.sh
siplus/: block_visitor.cpp  block_visitor.h  block_visitor.hxx  build_context.cpp  build_context.h  c.cpp  context.cpp  data.cpp  expr_stmt_visitor.cpp  expr_stmt_visitor.h  expr_stmt_visitor.hxx  expr_visitor.cpp  expr_visitor.h  expr_visitor.hxx  interpolation_visitor.cpp  interpolation_visitor.h  interpolation_visitor.hxx  invocation_context.cpp  invocation_context_impl.h  invocation_context_impl.hxx  literal_visitor.cpp  literal_visitor.h  literal_visitor.hxx  parser_impl.cpp  parser_impl.h  parser_impl.hxx  si_parser.cpp  si_parser.h  standardlib.cpp  statement_visitor.cpp  statement_visitor.h  statement_visitor.hxx  text.cpp  token_stream.cpp  token_stream.h  types.cpp  util.cpp  util.h  util.hxx  visitor.cpp  (+2 more)
siplus/retrievers/: default_data_retriever.hxx  indexer_value_retriever.hxx  literal_array_retriever.hxx  retrievers.cpp  variable_assignment_retriever.hxx
siplus/stdlib/: arithmetic.cpp  comparison.cpp  control.cpp  converters.cpp  converting_operator.cpp  iterable.cpp  rand.cpp  set.cpp  standardlib.cpp  text.cpp  type.cpp  util.h
siplus/visitors/: block_contents_visitor.cpp  block_contents_visitor.hxx  expr_suffix_visitor.cpp  expr_suffix_visitor.hxx  piped_expr_visitor.cpp  piped_expr_visitor.hxx  siplus_visitor.cpp  siplus_visitor.hxx  visitor.cpp  visitor.hxx
tests/: CMakeLists.txt  common.cxx  common.hxx  runner_extra.hxx  test_array.cxx  test_base.cxx  test_c.cxx  test_expression.cxx  test_function.cxx  test_interpolate.cxx  test_loop.cxx  test_stdlib.cxx  test_variable.cxx
tests/util/: CMakeLists.txt
